force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Type_Of_Issue__c.field-meta.xml
<CustomField>
    <fullName>AVO_Type_Of_Issue__c</fullName>
    <label>Type Of Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permit Related</fullName>
            </value>
            <value>
                <fullName>Meter Related</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>