force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Unit_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>AVO_Unit_Multiplier__c</fullName>
    <label>Unit Multiplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>.10x</fullName>
            </value>
            <value>
                <fullName>.01x</fullName>
            </value>
            <value>
                <fullName>.001x</fullName>
            </value>
            <value>
                <fullName>.0001x</fullName>
            </value>
            <value>
                <fullName>1x</fullName>
            </value>
            <value>
                <fullName>10x</fullName>
            </value>
            <value>
                <fullName>100x</fullName>
            </value>
            <value>
                <fullName>1,000x</fullName>
            </value>
            <value>
                <fullName>10,000x</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>