force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>AVO_Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acre/Inches</fullName>
            </value>
            <value>
                <fullName>Gallons</fullName>
            </value>
            <value>
                <fullName>Acre/Feet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>