force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Units_to_Review__c.field-meta.xml
<CustomField>
    <fullName>AVO_Units_to_Review__c</fullName>
    <label>Units to Review</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metering</fullName>
            </value>
            <value>
                <fullName>Permitting</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>WWSA</fullName>
            </value>
            <value>
                <fullName>GIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>