force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_User_Region_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_User_Region_ID__c</fullName>
    <label>User Region ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Region 1</fullName>
            </value>
            <value>
                <fullName>Region 2</fullName>
            </value>
            <value>
                <fullName>Region 3</fullName>
            </value>
            <value>
                <fullName>Region 4</fullName>
            </value>
            <value>
                <fullName>Region 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>