force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Vanes_Present__c.field-meta.xml
<CustomField>
    <fullName>AVO_Vanes_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vanes Present?</label>
    <type>Checkbox</type>
</CustomField>