force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Verify_Class__c.field-meta.xml
<CustomField>
    <fullName>AVO_Verify_Class__c</fullName>
    <label>Verify Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Meter Site Inspection</fullName>
            </value>
            <value>
                <fullName>Permit Site Inspection</fullName>
            </value>
            <value>
                <fullName>Compliance Investigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>