force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Verify_Processed__c.field-meta.xml
<CustomField>
    <fullName>AVO_Verify_Processed__c</fullName>
    <label>Verify Processed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>