force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Verify_Reason__c.field-meta.xml
<CustomField>
    <fullName>AVO_Verify_Reason__c</fullName>
    <label>Verify Reason</label>
    <type>TextArea</type>
</CustomField>