force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Verify_Request_By__c.field-meta.xml
<CustomField>
    <fullName>AVO_Verify_Request_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verify Request By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inspections2</relationshipName>
    <type>Lookup</type>
</CustomField>