force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_VerifyID__c.field-meta.xml
<CustomField>
    <fullName>AVO_VerifyID__c</fullName>
    <label>VerifyID</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>