force-app/main/default/objects/MUSW__Inspection__c/fields/Avo_Violation__c.field-meta.xml
<CustomField>
    <fullName>Avo_Violation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Violation</label>
    <referenceTo>MUSW__Violation__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>