force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_water_source_for_field__c.field-meta.xml
<CustomField>
    <fullName>AVO_water_source_for_field__c</fullName>
    <label>Is there a water source for this field?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>