force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_well_constructed__c.field-meta.xml
<CustomField>
    <fullName>AVO_well_constructed__c</fullName>
    <label>Is well constructed according to the LOC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>