force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Well_Inspection_Completed__c.field-meta.xml
<CustomField>
    <fullName>AVO_Well_Inspection_Completed__c</fullName>
    <label>Well Inspection Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>