force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Well_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Well_Inspection_Date__c</fullName>
    <label>Well Inspection Date</label>
    <type>DateTime</type>
</CustomField>