force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>AVO_Withdrawal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Withdrawal</label>
    <referenceTo>AVO_Withdrawals__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>