force-app/main/default/objects/MUSW__Inspection__c/fields/Checklist_Version__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Version__c</fullName>
    <label>Checklist Version</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>