force-app/main/default/objects/MUSW__Inspection__c/fields/Close_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Close_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close Inspection</label>
    <type>Checkbox</type>
</CustomField>