force-app/main/default/objects/MUSW__Inspection__c/fields/Current_Violations__c.field-meta.xml
<CustomField>
    <fullName>Current_Violations__c</fullName>
    <label>Current Violations</label>
    <type>TextArea</type>
</CustomField>