force-app/main/default/objects/MUSW__Inspection__c/fields/Days_to_Next_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Next_Inspection__c</fullName>
    <label>Days to Next Inspection</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>