force-app/main/default/objects/MUSW__Inspection__c/fields/Due_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Due_DateTime__c</fullName>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>