force-app/main/default/objects/MUSW__Inspection__c/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <formula>CASE( MUSW__Status__c , 

&quot;Pending&quot;,&quot;No&quot;, 
&quot;Scheduled&quot;,&quot;No&quot;, 
&quot;Not Requested&quot;,&quot;No&quot;, 
&quot;Requested&quot;,&quot;No&quot;, 

&quot;Yes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed</label>
    <type>Text</type>
</CustomField>