force-app/main/default/objects/MUSW__Inspection__c/fields/Letter_Generated__c.field-meta.xml
<CustomField>
    <fullName>Letter_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Letter Generated</label>
    <type>Checkbox</type>
</CustomField>