force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__AlertCode__c.field-meta.xml
<CustomField>
    <fullName>MUSW__AlertCode__c</fullName>
    <description>Stoplight image displays green (0), yellow (1),  or red (2) depending on the value of the alert code field.</description>
    <label>Alert</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>