force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Close_Action__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Close_Action__c</fullName>
    <description>Actions or conditions in which the inspection is closed.</description>
    <inlineHelpText>Select the action taken to close the inspection.</inlineHelpText>
    <label>Completed Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unfounded</fullName>
            </value>
            <value>
                <fullName>No Access</fullName>
            </value>
            <value>
                <fullName>Verbal Warning</fullName>
            </value>
            <value>
                <fullName>Advisory Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>