force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Closed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Closed_DateTime__c</fullName>
    <description>Optional. This can be used if inspection metrics are measured in hours rather than days.</description>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>