force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Complaint2__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Complaint2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Complaint.</description>
    <label>Complaint</label>
    <referenceTo>MUSW__Complaint2__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>