force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Description__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Description__c</fullName>
    <description>Notes, comments, or description of what took place during the inspection.</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>