force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Due_Date__c</fullName>
    <description>The date the inspection is requested for or is due. Used for views that sort inspections on the Itinerary page and for reporting on Past Due inspections. Itinerary views include &quot;past due&quot;.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>