force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Estimated_Hours__c</fullName>
    <label>Estimated Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>