force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Inspection_Template__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Inspection_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Template</label>
    <referenceTo>MUSW__Master_Inspection_List__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>