force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Milestone__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone</label>
    <referenceTo>MUSW__Milestone__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>