force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__On_Itinerary__c.field-meta.xml
<CustomField>
    <fullName>MUSW__On_Itinerary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true on the itinerary page when an inspection is added to the itinerary and saved. This should be used in the creation of Views for the Itinerary page.</description>
    <label>On Itinerary</label>
    <type>Checkbox</type>
</CustomField>