force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Order__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Order__c</fullName>
    <description>Determines the display order on the itinerary page. When an inspection order is changed on an itinerary, this field is updated. It is not usually displayed on the inspection layout.</description>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>