force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Previous_Inspection__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Previous_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is commonly used in configuration. If a reinspection is created via a DRE rule, it is a best practice to fill in the parent inspection lookup.</description>
    <label>Previous Inspection</label>
    <referenceTo>MUSW__Inspection__c</referenceTo>
    <relationshipLabel>Re-Inspections</relationshipLabel>
    <relationshipName>Next_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>