force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Rank__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Rank__c</fullName>
    <description>This field stores the assigned ranking value generated by the Lexorank algorithm. The Lexorank value is an alphanumeric code that determines the precise ordering and spacing of records within the object. It is essential for maintaining a consistent and logical sequence of records. Please note that this field should not be modified manually, as it is automatically set by the system.</description>
    <label>Rank</label>
    <length>50</length>
    <type>Text</type>
</CustomField>