force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Region__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>MUSW__Region__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>