force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Requested_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Requested_End_DateTime__c</fullName>
    <description>The &quot;Requested End&quot; field captures the date and time when an inspection is requested to be completed. This field represents the preferred ending point for the inspection process based on the requester&apos;s desired timing.</description>
    <label>Requested End</label>
    <type>DateTime</type>
</CustomField>