force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Requested_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Requested_Start_DateTime__c</fullName>
    <description>The &quot;Requested Start&quot; field captures the date and time when an inspection is requested to begin. This field represents the preferred starting point for the inspection process based on the requester&apos;s desired timing.</description>
    <label>Requested Start</label>
    <type>DateTime</type>
</CustomField>