force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Scheduled_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Scheduled_End_DateTime__c</fullName>
    <description>The &quot;Scheduled End&quot; field represents the date and time when the inspection is scheduled to be completed. This field indicates the planned end time as determined by the scheduling team or system. It may or may not align with the requested end date/time.</description>
    <label>Scheduled End</label>
    <type>DateTime</type>
</CustomField>