force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Scheduled_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Scheduled_Start_Date__c</fullName>
    <description>Date the inspection is scheduled for (usually before or by due date if not late). Used for views on the itinerary page.</description>
    <label>Scheduled Start Date</label>
    <type>Date</type>
</CustomField>