force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Scheduled_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Scheduled_Start_DateTime__c</fullName>
    <description>The &quot;Scheduled Start&quot; field represents the date and time when the inspection is scheduled to begin. This field indicates the planned start time as determined by the scheduling team or system. It may or may not align with the requested start date/time.</description>
    <label>Scheduled Start</label>
    <type>DateTime</type>
</CustomField>