force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Start_Date__c</fullName>
    <description>Date the inspection was started. It is only filled in when inspector actually starts the inspection.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>