force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Status__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Status__c</fullName>
    <description>Current status or outcome of the inspection.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Initialized Site Visit</fullName>
            </value>
            <value>
                <fullName>Pending Site Visit Report</fullName>
            </value>
            <value>
                <fullName>Pending Site Visit Review</fullName>
            </value>
            <value>
                <fullName>Requester Review</fullName>
            </value>
            <value>
                <fullName>Additional Review</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>